--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
         .title {
             font-family: 'Black Han Sans', sans-serif;
             font-family: 'Jua', sans-serif;
-        }
-
-        .title {
-            color: white;
-            background-color: tomato;
+            color: 	#F5F5F5;
+            background-color: #B0E0E6;
             font-size: 34px;
             padding: 4px 14px;
             border-radius: 8px;
