--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         .title {
             font-family: 'Black Han Sans', sans-serif;
             font-family: 'Jua', sans-serif;
-            color: 	#F5F5F5;
-            background-color: #B0E0E6;
+            color: white;
+            background-color: #E6E6FA;
             font-size: 34px;
             padding: 4px 14px;
             border-radius: 8px;
