--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         .title {
             font-family: 'Black Han Sans', sans-serif;
             font-family: 'Jua', sans-serif;
-            color: 	#696969;
+            color: #F5F5DC;
             background-color: #E6E6FA;
             font-size: 34px;
             padding: 4px 14px;
