--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         .title {
             font-family: 'Black Han Sans', sans-serif;
             font-family: 'Jua', sans-serif;
-            color: #F5F5DC;
-            background-color: #E6E6FA;
+            color: snow;
+            background-color: #FFE4E1;
             font-size: 34px;
             padding: 4px 14px;
             border-radius: 8px;
