--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             font-family: 'Black Han Sans', sans-serif;
             font-family: 'Jua', sans-serif;
             color: snow;
-            background-color: #FFE4E1;
+            background-color: #FFB6C1;
             font-size: 34px;
             padding: 4px 14px;
             border-radius: 8px;
